--- a/ECommerceWebsite/src/main/webapp/css/style.css
+++ b/ECommerceWebsite/src/main/webapp/css/style.css
@@ -13,3 +13,8 @@
 	background: #e2e2e2;
 	cursor: pointer;
 }
+
+.list-group-item.active{
+	background:#673ab7!important;
+	border-color:#673ab7!important; 
+}
