--- a/ECommerceWebsite/src/main/webapp/css/style.css
+++ b/ECommerceWebsite/src/main/webapp/css/style.css
@@ -18,3 +18,15 @@
 	background:#673ab7!important;
 	border-color:#673ab7!important; 
 }
+
+.discount-label{
+	font-size: 10px!important;
+	font-style: italic!important;
+	/*text-decoration: line-through!important;*/
+	
+}
+
+.product-card:hover{
+	background: #e2e2e2;
+	cursor: pointer;
+}
