E-Commerce Cart Welcome Page Design and Display of Welcome Message on it ...DONE...!!!

--- a/ECommerceWebsite/src/main/webapp/css/style.css
+++ b/ECommerceWebsite/src/main/webapp/css/style.css
@@ -76,3 +76,9 @@
         opacity: 0;
     }
 }
+
+.home-content-wrapper{
+	background-image: url('../image/BackG.jpg');
+	background-size: cover;
+	height:80%;
+}
